# undead-mongoose

./: .gitignore  LICENSE  Pipfile  README.md  default.nix  docker-compose.yml  koala-migrate.py  manage.py  pyproject.toml  requirements.txt  sample.env  shell.nix
admin_board_view/: apps.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
admin_board_view/templates/: base.html  home.html  login.html  mutations.html  pagination_footer.html  product_sales_info.html  products.html  settings.html  transactions.html  user.html  user_home.html
mongoose_app/: admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
mongoose_app/migrations/: 0001_initial.py  0002_auto_20211110_1438.py  0003_auto_20211111_2141.py  0004_auto_20211118_1410.py  0005_auto_20211119_1157.py  0006_auto_20211119_1207.py  0007_alter_user_balance.py  0008_topuptransaction_added.py  0009_category_alcoholic.py  0010_remove_topuptransaction_refunded.py  0011_rename_cards_card.py  0012_auto_20211206_2211.py  0013_alter_saletransaction_user_id_and_more.py  0014_remove_user_age_user_birthday.py  0015_vat_product_vat.py  0016_alter_vat_options_producttransactions_product_vat.py  0017_alter_producttransactions_options_alter_product_vat.py  0018_alter_product_image.py  0018_cardconfirmation.py  0019_alter_user_user_id.py  0020_alter_user_user_id.py  0021_merge_20220120_1429.py  0022_alter_saletransaction_transaction_sum_and_more.py  0024_product_enabled.py  (+14 more)
nix/: django-constance.nix  django-oidc.nix
undead_mongoose/: asgi.py  oidc.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
