[project]
dependencies = [
  "asgiref==3.8.1",
  "certifi==2024.8.30",
  "cffi==1.17.1",
  "charset-normalizer==3.4.0",
  "cryptography==44.0.0",
  "Django==4.0",
  "django-constance==2.8.0",
  "django-environ==0.11.2",
  "django-picklefield==3.2",
  "gunicorn==23.0.0",
  "idna==3.10",
  "josepy==1.14.0",
  "mozilla-django-oidc==2.0.0",
  "packaging==24.2",
  "pillow==11.0.0",
  "psycopg2==2.9.10",
  "pycparser==2.22",
  "pyOpenSSL==24.3.0",
  "requests==2.32.3",
  "sentry-sdk==2.19.0",
  "sqlparse==0.5.2",
  "urllib3==2.2.3",
  "python-dotenv[cli]",
  "mollie-api-python>=3.7.4",
  "gunicorn",
  "faker>=35.2.0",
]
name = "undead-mongoose"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.6"
